--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Alata&family=Bai+Jamjuree:wght@400;600&family=Josefin+Sans:wght@300&display=swap"
 			rel="stylesheet" />
+		<script src="../js/script.js" defer></script>
 		<link rel="stylesheet" href="../css/style.css" />
 		<title>Loop-Studios</title>
 	</head>
@@ -50,9 +51,29 @@
 						</div>
 					</div>
 					<!-- @todo Hamburger Button -->
+					<div class="md:hidden">
+						<button
+							id="menu-btn"
+							type="button"
+							class="z-40 block hamburger md:hidden focus:outline-none">
+							<span class="hamburger-top"></span>
+							<span class="hamburger-middle"></span>
+							<span class="hamburger-bottom"></span>
+						</button>
+					</div>
 				</nav>
 
 				<!-- @todo - Mobile Menu -->
+				<div
+					id="menu"
+					class="absolute top-0 bottom-0 left-0 hidden flex-col self-end w-full min-h-screen py-1 pt-40 pl-12 space-y-3 text-lg text-white uppercase bg-black">
+					<a href="#" class="hover:text-pink-500">About</a>
+					<a href="#" class="hover:text-pink-500">Careers</a>
+					<a href="#" class="hover:text-pink-500">Events</a>
+					<a href="#" class="hover:text-pink-500">Products</a>
+					<a href="#" class="hover:text-pink-500">Support</a>
+				</div>
+
 				<div
 					class="mx-w-lg mt-32 mb-32 p-4 font-sans text-4xl text-white uppercase border-2 md:p-10 md:m-32 md:mx-0 md:text-6xl">
 					Impresive Experiences That Deliver
