--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Alata&family=Bai+Jamjuree:wght@400;600&family=Josefin+Sans:wght@300&display=swap"
 			rel="stylesheet" />
-		<script src="js/script.js" defer></script>
+		<script src="../src/js/script.js" defer></script>
 		<link rel="stylesheet" href="../css/style.css" />
 		<title>Loop-Studios</title>
 	</head>
